@@ -8,7 +8,6 @@ import java.math.BigInteger;
 import java.util.*;
 import org.apache.commons.lang3.RandomStringUtils;
 import org.databiosphere.workspacedataservice.service.DataTypeInferer;
-import org.databiosphere.workspacedataservice.service.InBoundDataSource;
 import org.databiosphere.workspacedataservice.service.RelationUtils;
 import org.databiosphere.workspacedataservice.service.model.DataTypeMapping;
 import org.databiosphere.workspacedataservice.shared.model.Record;
@@ -26,7 +25,7 @@ class DataTypeInfererTest {
 
 	@Test
 	void inferTypesJsonSource() {
-		Map<String, DataTypeMapping> result = inferer.inferTypes(getSomeAttrs(), InBoundDataSource.JSON);
+		Map<String, DataTypeMapping> result = inferer.inferTypes(getSomeAttrs());
 		Map<String, DataTypeMapping> expected = new HashMap<>();
 		expected.put("array_of_string", DataTypeMapping.ARRAY_OF_STRING);
 		expected.put("string_val", DataTypeMapping.STRING);
@@ -65,23 +64,6 @@ class DataTypeInfererTest {
 	}
 
 	@Test
-	void inferTypesTsvSource() {
-		Map<String, DataTypeMapping> result = inferer.inferTypes(getSomeTsvAttrs(), InBoundDataSource.TSV);
-		Map<String, DataTypeMapping> expected = new HashMap<>();
-		expected.put("string_val", DataTypeMapping.STRING);
-		expected.put("int_val", DataTypeMapping.NUMBER);
-		expected.put("json_val", DataTypeMapping.JSON);
-		expected.put("date_val", DataTypeMapping.DATE);
-		expected.put("date_time_val", DataTypeMapping.DATE_TIME);
-		expected.put("number_or_string", DataTypeMapping.NUMBER);
-		expected.put("relation", DataTypeMapping.RELATION);
-		expected.put("rel_arr", DataTypeMapping.ARRAY_OF_RELATION);
-		expected.put("file_val", DataTypeMapping.FILE);
-		expected.put("array_of_file", DataTypeMapping.ARRAY_OF_FILE);
-		assertEquals(expected, result);
-	}
-
-	@Test
 	void isValidJson() {
 		assertThat(inferer.isValidJson(RandomStringUtils.randomNumeric(10))).isFalse();
 		assertThat(inferer.isValidJson("Hello")).isFalse();
@@ -91,64 +73,51 @@ class DataTypeInfererTest {
 	}
 
 	@Test
-	void nullValuesMixedWithNonNullsShouldStillYieldProperTypeTSV() {
-		RecordAttributes firstAttrs = RecordAttributes.empty().putAttribute("boolean", "").putAttribute("long", null);
-		Record first = new Record("first", RecordType.valueOf("test-inference"), firstAttrs);
-		RecordAttributes secondAttrs = RecordAttributes.empty().putAttribute("boolean", "true").putAttribute("long",
-				"-999999");
-		Record second = new Record("second", RecordType.valueOf("test-inference"), secondAttrs);
-		Map<String, DataTypeMapping> inferredSchema = inferer.inferTypes(List.of(first, second), InBoundDataSource.TSV);
-		assertThat(inferredSchema).as("Should still get BOOLEAN and LONG for types despite null values in one record")
-				.isEqualTo(Map.of("boolean", DataTypeMapping.BOOLEAN, "long", DataTypeMapping.NUMBER));
-	}
-
-	@Test
 	void nullValuesMixedWithNonNullsShouldStillYieldProperTypeJSON() {
 		RecordAttributes firstAttrs = RecordAttributes.empty().putAttribute("boolean", null).putAttribute("long", null);
 		Record first = new Record("first", RecordType.valueOf("test-inference"), firstAttrs);
 		RecordAttributes secondAttrs = RecordAttributes.empty().putAttribute("boolean", "true").putAttribute("long",
 				new BigInteger("-999999"));
 		Record second = new Record("second", RecordType.valueOf("test-inference"), secondAttrs);
-		Map<String, DataTypeMapping> inferredSchema = inferer.inferTypes(List.of(first, second),
-				InBoundDataSource.JSON);
+		Map<String, DataTypeMapping> inferredSchema = inferer.inferTypes(List.of(first, second)
+		);
 		assertThat(inferredSchema).as("Should still get BOOLEAN and LONG for types despite null values in one record")
 				.isEqualTo(Map.of("boolean", DataTypeMapping.BOOLEAN, "long", DataTypeMapping.NUMBER));
 	}
 
 	@Test
 	void inferSomeTypes() {
-		assertThat(inferer.inferType("True", InBoundDataSource.JSON)).isEqualTo(DataTypeMapping.BOOLEAN);
-		assertThat(inferer.inferType("Hello", InBoundDataSource.JSON)).isEqualTo(DataTypeMapping.STRING);
-		assertThat(inferer.inferType("2020-01-01", InBoundDataSource.JSON)).isEqualTo(DataTypeMapping.DATE);
-		assertThat(inferer.inferType("2020-01-01T00:10:00", InBoundDataSource.JSON))
+		assertThat(inferer.inferType("True")).isEqualTo(DataTypeMapping.BOOLEAN);
+		assertThat(inferer.inferType("Hello")).isEqualTo(DataTypeMapping.STRING);
+		assertThat(inferer.inferType("2020-01-01")).isEqualTo(DataTypeMapping.DATE);
+		assertThat(inferer.inferType("2020-01-01T00:10:00"))
 				.isEqualTo(DataTypeMapping.DATE_TIME);
-		assertThat(inferer.inferType("2020-01-01T00:10:00", InBoundDataSource.JSON))
+		assertThat(inferer.inferType("2020-01-01T00:10:00"))
 				.isEqualTo(DataTypeMapping.DATE_TIME);
-		assertThat(inferer.inferType("12345", InBoundDataSource.JSON)).isEqualTo(DataTypeMapping.STRING);
-		assertThat(inferer.inferType("12345A", InBoundDataSource.JSON)).isEqualTo(DataTypeMapping.STRING);
-		assertThat(inferer.inferType(List.of("Hello!"), InBoundDataSource.JSON)).isEqualTo(DataTypeMapping.ARRAY_OF_STRING);
-		assertThat(inferer.inferType(List.of(new BigInteger("12345")), InBoundDataSource.JSON)).isEqualTo(DataTypeMapping.ARRAY_OF_NUMBER);
-		assertThat(inferer.inferType(List.of(true, false, true), InBoundDataSource.JSON)).isEqualTo(DataTypeMapping.ARRAY_OF_BOOLEAN);
-		assertThat(inferer.inferType(List.of(new BigDecimal("11.1"), new BigDecimal("12"), new BigDecimal("14")), InBoundDataSource.JSON)).isEqualTo(DataTypeMapping.ARRAY_OF_NUMBER);
-		assertThat(inferer.inferType(List.of(RelationUtils.createRelationString(RecordType.valueOf("testType"),"recordId"), RelationUtils.createRelationString(RecordType.valueOf("testType"),"recordId2"), RelationUtils.createRelationString(RecordType.valueOf("testType"),"recordId3")), InBoundDataSource.JSON)).isEqualTo(DataTypeMapping.ARRAY_OF_RELATION);
-		assertThat(inferer.inferType(List.of(RelationUtils.createRelationString(RecordType.valueOf("testType"),"recordId"), "not a relation string", RelationUtils.createRelationString(RecordType.valueOf("testType"),"recordId3")), InBoundDataSource.JSON)).isEqualTo(DataTypeMapping.ARRAY_OF_STRING);
-		assertThat(inferer.inferType(RelationUtils.createRelationString(RecordType.valueOf("testType"),"recordId3"), InBoundDataSource.JSON)).isEqualTo(DataTypeMapping.RELATION);
-		assertThat(inferer.inferType("https://lz1a2b345c67def8a91234bc.blob.core.windows.net/sc-7ad51c5d-eb4c-4685-bffe-62b861f7753f/my%20file.pdf", InBoundDataSource.JSON)).isEqualTo(DataTypeMapping.FILE);
+		assertThat(inferer.inferType("https://lz1a2b345c67def8a91234bc.blob.core.windows.net/sc-7ad51c5d-eb4c-4685-bffe-62b861f7753f/my%20file.pdf")).isEqualTo(DataTypeMapping.FILE);
+		assertThat(inferer.inferType("12345")).isEqualTo(DataTypeMapping.STRING);
+		assertThat(inferer.inferType("12345A")).isEqualTo(DataTypeMapping.STRING);
+		assertThat(inferer.inferType(List.of("Hello!"))).isEqualTo(DataTypeMapping.ARRAY_OF_STRING);
+		assertThat(inferer.inferType(List.of(new BigInteger("12345")))).isEqualTo(DataTypeMapping.ARRAY_OF_NUMBER);
+		assertThat(inferer.inferType(List.of(true, false, true))).isEqualTo(DataTypeMapping.ARRAY_OF_BOOLEAN);
+		assertThat(inferer.inferType(List.of(new BigDecimal("11.1"), new BigDecimal("12"), new BigDecimal("14")))).isEqualTo(DataTypeMapping.ARRAY_OF_NUMBER);
+		assertThat(inferer.inferType(List.of(RelationUtils.createRelationString(RecordType.valueOf("testType"),"recordId"), RelationUtils.createRelationString(RecordType.valueOf("testType"),"recordId2"), RelationUtils.createRelationString(RecordType.valueOf("testType"),"recordId3")))).isEqualTo(DataTypeMapping.ARRAY_OF_RELATION);
+		assertThat(inferer.inferType(List.of(RelationUtils.createRelationString(RecordType.valueOf("testType"),"recordId"), "not a relation string", RelationUtils.createRelationString(RecordType.valueOf("testType"),"recordId3")))).isEqualTo(DataTypeMapping.ARRAY_OF_STRING);
+		assertThat(inferer.inferType(RelationUtils.createRelationString(RecordType.valueOf("testType"),"recordId3"))).isEqualTo(DataTypeMapping.RELATION);
 	}
 
 	@Test
 	void ambiguousConversions() {
-		assertThat(inferer.inferType(List.of(true, "false", "True"), InBoundDataSource.JSON)).isEqualTo(DataTypeMapping.ARRAY_OF_BOOLEAN);
-		assertThat(inferer.inferType(List.of("11", "99"), InBoundDataSource.JSON)).isEqualTo(DataTypeMapping.ARRAY_OF_STRING);
-		assertThat(inferer.inferType(List.of("11", new BigDecimal("99"), "foo"), InBoundDataSource.JSON)).isEqualTo(DataTypeMapping.ARRAY_OF_STRING);
-		assertThat(inferer.inferType("", InBoundDataSource.TSV)).isEqualTo(DataTypeMapping.NULL);
-		assertThat(inferer.inferType("", InBoundDataSource.JSON)).isEqualTo(DataTypeMapping.STRING);
-		assertThat(inferer.inferType(List.of(new BigInteger("11"), new BigInteger("99"), new BigDecimal("-3.14")), InBoundDataSource.JSON)).isEqualTo(DataTypeMapping.ARRAY_OF_NUMBER);
-		assertThat(inferer.inferType(List.of(new BigInteger("11"), new BigInteger("99"), new BigDecimal("-3.14"), "09"), InBoundDataSource.JSON)).isEqualTo(DataTypeMapping.ARRAY_OF_STRING);
-		assertThat(inferer.inferType(Collections.emptyList(), InBoundDataSource.JSON)).isEqualTo(DataTypeMapping.EMPTY_ARRAY);
-		assertThat(inferer.inferType("[11, 99, -3.14, 09]", InBoundDataSource.TSV)).isEqualTo(DataTypeMapping.STRING);
-		assertThat(inferer.inferType("[a]", InBoundDataSource.JSON)).isEqualTo(DataTypeMapping.STRING);
-		assertThat(inferer.inferType("[11, 99, -3.14, 09]", InBoundDataSource.JSON)).isEqualTo(DataTypeMapping.STRING);
+		assertThat(inferer.inferType(List.of(true, "false", "True"))).isEqualTo(DataTypeMapping.ARRAY_OF_BOOLEAN);
+		assertThat(inferer.inferType(List.of("11", "99"))).isEqualTo(DataTypeMapping.ARRAY_OF_STRING);
+		assertThat(inferer.inferType(List.of("11", new BigDecimal("99"), "foo"))).isEqualTo(DataTypeMapping.ARRAY_OF_STRING);
+		assertThat(inferer.inferType("")).isEqualTo(DataTypeMapping.STRING);
+		assertThat(inferer.inferType(List.of(new BigInteger("11"), new BigInteger("99"), new BigDecimal("-3.14")))).isEqualTo(DataTypeMapping.ARRAY_OF_NUMBER);
+		assertThat(inferer.inferType(List.of(new BigInteger("11"), new BigInteger("99"), new BigDecimal("-3.14"), "09"))).isEqualTo(DataTypeMapping.ARRAY_OF_STRING);
+		assertThat(inferer.inferType(Collections.emptyList())).isEqualTo(DataTypeMapping.EMPTY_ARRAY);
+		assertThat(inferer.inferType("[11, 99, -3.14, 09]")).isEqualTo(DataTypeMapping.STRING);
+		assertThat(inferer.inferType("[a]")).isEqualTo(DataTypeMapping.STRING);
+		assertThat(inferer.inferType("[11, 99, -3.14, 09]")).isEqualTo(DataTypeMapping.STRING);
 	}
 
 	private static RecordAttributes getSomeAttrs() {
@@ -170,16 +139,4 @@ class DataTypeInfererTest {
 				));
 	}
 
-	private static RecordAttributes getSomeTsvAttrs() {
-		return new RecordAttributes(
-				Map.of("int_val", "4747", "string_val", "Abracadabra Open Sesame", "json_val", "{\"list\": [\"a\", \"b\"]}",
-						"date_val", "2001-11-03", "date_time_val", "2001-11-03T10:00:00",
-						"file_val", "https://lz1a2b345c67def8a91234bc.blob.core.windows.net/sc-7ad51c5d-eb4c-4685-bffe-62b861f7753f/file.bam",
-						"array_of_file",
-						"[\"https://lz1a2b345c67def8a91234bc.blob.core.windows.net/sc-7ad51c5d-eb4c-4685-bffe-62b861f7753f/file.fasta\",\"drs://jade.datarepo-dev.broadinstitute.org/v1%209545e956%20d0ed164c1890\"]",
-						"number_or_string", "47",
-						"relation", RelationUtils.createRelationString(RecordType.valueOf("testRecordType"), "testRecordId"),
-						"rel_arr", "[\""+RelationUtils.createRelationString(RecordType.valueOf("testRecordType"), "testRecordId")+"\", \""
-				+RelationUtils.createRelationString(RecordType.valueOf("testRecordType"), "testRecordId2")+"\"]"));
-	}
 }
